# personal-reverse-proxy-over-nat-firewall

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README-DNS-CLOUDFLARE.md  README.md  TODO.md  config.sample.yaml  docker-compose.yml  proxy-manager  pyproject.toml  requirements.txt  test_twilio_mock.py
.gemini/: styleguide.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gemini-code-review.yml
certbot/: README.md
certbot/config/: cloudflare.sample.ini
cli/: cli.py
mock-twilio/: app.py
nginx/: default-cert.pem  default-key.pem  default.conf  template.conf
nginx/available/: huma-dev.sadeq.uk.conf  mock-twilio.conf
nginx/templates/: mock-twilio.conf  sample.conf  template.conf
personal_grok/: cli.py
scripts/: setup.sh  tunnel.sh
services/mock-twilio/: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh  setup.sh
services/mock-twilio/mock_twilio/: __init__.py  config.py  main.py  models.py
services/mock-twilio/tests/: test_api.py
yazdi_prpon/: cli.py  cloudflare.py
